# mediastorm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  REFACTORING.md  TODO-INVESTIGATE.md  build.sh  docker-compose.test.yml  docker-compose.yml
.github/workflows/: android-build.yml  docker-build.yml
backend/: Dockerfile  Makefile  download_subtitle.py  go.mod  go.sum  main.go  search_subtitles.py  version.txt
backend/admin/: app.py
backend/api/: middleware.go  middleware_test.go  ratelimit.go  ratelimit_test.go  routes.go
backend/config/: adapter.go  migrations.go  presets.json  profile_scope.go  profile_scope_test.go  settings.go  settings_test.go
backend/handlers/: account_ui.go  accounts.go  accounts_test.go  admin.go  admin_live_usage_module.go  admin_live_usage_module_test.go  admin_onboarding_test.go  admin_test.go  admin_ui.go  admin_ui_internal_test.go  admin_ui_test.go  anime_detection.go  auth.go  auth_test.go  backup.go  calendar.go  calendar_internal_test.go  calendar_test.go  clients.go  custom_lists.go  debrid.go  details_bundle.go  details_bundle_filter_test.go  details_bundle_test.go  dev.go  display_list.go  display_list_test.go  dv_helper.go  epg.go  epg_test.go  (+100 more)
docs/: LOCAL_MEDIA_FRONTEND_PLAN.md
experiments/iroh-direct-spike/: Cargo.toml  README.md
experiments/iroh-direct-spike/src/: main.rs  rendezvous.rs
frontend/: .gitignore  app.config.js  eas.json  jest.setup.js  ksplayer-dv-fix.patch  metro.config.js  package-lock.json  package.json  react-native.config.js  test-api-connectivity.js  wdyr.ts
(+538 files in other folders)
